note edits upto lec 13

--- a/lectures/201-Lecuyer-lectures/12_ensembles.ipynb
+++ b/lectures/201-Lecuyer-lectures/12_ensembles.ipynb
@@ -136,7 +136,8 @@
    "source": [
     "### The Netflix prize\n",
     "\n",
-    "![](../img/netflix.png)\n",
+    "<img src=\"../img/netflix.png\" width=\"50%\">\n",
+    "\n",
     "\n",
     "[Source](https://netflixtechblog.com/netflix-recommendations-beyond-the-5-stars-part-1-55838468f429)\n",
     "\n",
@@ -153,7 +154,7 @@
    "source": [
     "- Most of the winning solutions for Kaggle competitions involve some kind of ensembling. For example: \n",
     "\n",
-    "<img src=\"../img/fraud_detection_kaggle.png\" width=\"600\" height=\"600\">"
+    "<img src=\"../img/fraud_detection_kaggle.png\" width=\"30%\">"
    ]
   },
   {
@@ -168,7 +169,7 @@
     "\n",
     "[The Wisdom of Crowds](http://wisdomofcrowds.blogspot.com/2009/12/introduction-part-i.html)\n",
     "\n",
-    "<img src=\"../img/wisdom_of_crowds.jpg\" width=\"300\" height=\"300\">"
+    "<img src=\"../img/wisdom_of_crowds.jpg\" width=\"15%\">\n"
    ]
   },
   {
@@ -199,7 +200,7 @@
     "### Tree-based models \n",
     "\n",
     "- Decision trees models are \n",
-    "    - Interpretable \n",
+    "    - <u>**Interpretable**</u>\n",
     "    - They can capture non-linear relationships\n",
     "    - They don't require scaling of the data and theoretically can work with categorical features and missing values. \n",
     "- **But**: Single decision trees are likely to overfit. "
@@ -1504,8 +1505,8 @@
     "    - a sample drawn with replacement for tree 1: [1,1,3,3,3,4]\n",
     "    - a sample drawn with replacement for tree 2: [3,2,2,2,1,1]\n",
     "    - a sample drawn with replacement for tree 3: [0,0,0,4,4,5]\n",
-    "- Each decision tree trains on a total of six examples.\n",
-    "- Each tree trains on a different set of examples. "
+    "- Each decision tree trains on a total of six **'examples'**.\n",
+    "- Each tree trains on a different **'set of examples'**. "
    ]
   },
   {
@@ -2004,9 +2005,9 @@
    "source": [
     "### Some important hyperparameters:\n",
     "\n",
-    "- `n_estimators`: number of decision trees (higher = more complexity)\n",
-    "- `max_depth`: max depth of each decision tree (higher = more complexity)\n",
-    "- `max_features`: the number of features you get to look at each split (higher = more complexity)"
+    "- `n_estimators`: number of decision trees (**higher** = more complexity)\n",
+    "- `max_depth`: max depth of each decision tree (**higher** = more complexity)\n",
+    "- `max_features`: the number of features you get to look at each split (**higher** = more complexity)"
    ]
   },
   {
@@ -2060,7 +2061,7 @@
     "- Above: seems like we're beating the fundamental \"tradeoff\" by increasing training score and not decreasing validation score much.\n",
     "- You'll often see a high training scores for in the context of random forests. That's normal. It doesn't mean that the model is overfitting. \n",
     "- While ensembles often offer improved performance, this benefit isn't always guaranteed.\n",
-    "- Always opting for more trees in a random forest is preferable, but we sometimes choose fewer trees for faster performance.\n"
+    "- Always opting for <u>**more**</u> trees in a random forest is preferable, but we sometimes choose fewer trees for faster performance.\n"
    ]
   },
   {
@@ -2076,7 +2077,7 @@
     "- Usually one of the best performing off-the-shelf classifiers without heavy tuning of hyperparameters\n",
     "- Don't require scaling of data \n",
     "- Less likely to overfit \n",
-    "- Slower than decision trees because we are fitting multiple trees but can easily parallelize training because all trees are independent of each other \n",
+    "- Slower than decision trees because we are **fitting multiple trees** but can easily <u>**parallelize training**</u> because all trees are **independent** of each other \n",
     "- In general, able to capture a much broader picture of the data compared to a single decision tree. "
    ]
   },
@@ -2091,8 +2092,8 @@
     "### Weaknesses\n",
     "\n",
     "- Require more memory \n",
-    "- Hard to interpret\n",
-    "- Tend not to perform well on high dimensional sparse data such as text data\n"
+    "- <u>**Hard to interpret**</u>\n",
+    "- Tend not to perform well on high dimensional sparse data such as **text data**.\n"
    ]
   },
   {
@@ -2113,9 +2114,8 @@
     }
    },
    "source": [
-    "```{important}\n",
-    "Make sure to set the `random_state` for reproducibility. Changing the `random_state` can have a big impact on the model and the results due to the random nature of these models. Having more trees can get you a more robust estimate. \n",
-    "```"
+    "Important note:\n",
+    "> Make sure to set the `random_state` for reproducibility. Changing the `random_state` can have a big impact on the model and the results due to the random nature of these models. Having more trees can get you a <u>**more robust**</u> estimate. \n"
    ]
   },
   {
@@ -2157,7 +2157,7 @@
     "\n",
     "**Select the most accurate option below.**\n",
     "\n",
-    "- (A) Every tree in a random forest uses a different bootstrap sample of the training set.\n",
+    "- (A) **Every tree in a random forest uses a different bootstrap sample of the training set.**\n",
     "- (B) To train a tree in a random forest, we first randomly select a subset of features. The tree is then restricted to only using those features.\n",
     "- (C) The `n_estimators` hyperparameter of random forests should be tuned to get a better performance on the validation or test data.  \n",
     "- (D) In random forests we build trees in a sequential fashion, where the current tree is dependent upon the previous tree.  \n",
@@ -2266,7 +2266,7 @@
     }
    },
    "source": [
-    "We'll look at brief examples of using the following three gradient boosted tree models. \n",
+    "We'll look at brief examples of using the following three **gradient boosted tree models**. \n",
     "\n",
     "- [XGBoost](https://xgboost.readthedocs.io/en/latest/)\n",
     "- [LightGBM](https://lightgbm.readthedocs.io/en/latest/Python-Intro.html) \n",
@@ -2285,10 +2285,10 @@
     "\n",
     "- Not part of `sklearn` but has similar interface. \n",
     "- Install it in your conda environment: `conda install -c conda-forge xgboost`\n",
-    "- Supports missing values\n",
+    "- Supports <u>**missing values**</u>\n",
     "- GPU training, networked parallel training\n",
-    "- Supports sparse data\n",
-    "- Typically better scores than random forests    "
+    "- Supports <u>**sparse data**</u>\n",
+    "- Typically ****better scores**** than random forests!   "
    ]
   },
   {
@@ -2325,7 +2325,7 @@
     "\n",
     "- Not part of `sklearn` but has similar interface. \n",
     "- Install it in your course conda environment: `conda install -c conda-forge catboost`\n",
-    "- Usually better scores but slower compared to `XGBoost` and `LightGBM`     "
+    "- Usually better scores but <u>**slower**</u> compared to `XGBoost` and `LightGBM`     "
    ]
   },
   {
@@ -2341,7 +2341,7 @@
     "- `n_estimators` $\\rightarrow$ Number of boosting rounds\n",
     "- `learning_rate` $\\rightarrow$ The learning rate of training\n",
     "    - controls how strongly each tree tries to correct the mistakes of the previous trees\n",
-    "    - higher learning rate means each tree can make stronger corrections, which means more complex model \n",
+    "    - higher learning rate means each tree can make ***stronger corrections, which means <u>more complex</u> model***.\n",
     "- `max_depth` $\\rightarrow$ `max_depth` of trees (similar to decision trees) \n",
     "- `scale_pos_weight` $\\rightarrow$ Weights positive class examples to balance the labels."
    ]
@@ -2413,14 +2413,11 @@
     "    preprocessor, LogisticRegression(max_iter=2000, random_state=123)\n",
     ")\n",
     "pipe_dt = make_pipeline(preprocessor, DecisionTreeClassifier(random_state=123))\n",
-    "pipe_rf = make_pipeline(\n",
-    "    preprocessor, RandomForestClassifier(class_weight=\"balanced\", random_state=123)\n",
+    "pipe_rf = make_pipeline(preprocessor, RandomForestClassifier(class_weight=\"balanced\", random_state=123)\n",
     ")\n",
     "pipe_xgb = make_pipeline(\n",
     "    preprocessor,\n",
-    "    XGBClassifier(\n",
-    "        random_state=123, verbosity=0\n",
-    "    ),\n",
+    "    XGBClassifier(random_state=123, verbosity=0),\n",
     ")\n",
     "pipe_lgbm = make_pipeline(\n",
     "    preprocessor, LGBMClassifier(random_state=123, verbose=-1)\n",
@@ -2642,7 +2639,7 @@
    "source": [
     "**Some observations**\n",
     "- Keep in mind all these results are with default hyperparameters\n",
-    "- Ideally we would carry out hyperparameter optimization for all of them and then compare the results. \n",
+    "- **Ideally we would carry out hyperparameter optimization for all of them and then compare the results.** *****\n",
     "- We are using a particular scoring metric (accuracy in this case)\n",
     "- We are scaling numeric features but it shouldn't matter for tree-based models\n",
     "- Look at the standard deviation. Doesn't look very high. \n",
@@ -2815,7 +2812,7 @@
     "### Which model should I use?\n",
     "\n",
     "**Simple answer**\n",
-    "- Whichever gets the highest CV score making sure that you're not overusing the validation set."
+    "- Whichever gets the highest CV score while making sure that you're not overusing the validation set."
    ]
   },
   {
@@ -2841,7 +2838,7 @@
    },
    "source": [
     "**Speed/code maintenance**\n",
-    "- Other considerations could be speed (fit and/or predict), maintainability of the code.\n",
+    "- Other considerations could be speed (fit and/or predict), **maintainability** of the code.\n",
     "\n",
     "Finally, you could use all of them!"
    ]
@@ -2957,7 +2954,7 @@
     "\n",
     "averaging_model = VotingClassifier(\n",
     "    list(classifiers.items()), voting=\"soft\"\n",
-    ")  # need the list() here for cross-validation to work!"
+    ")  # need the list() here for cross-validation to work! *****"
    ]
   },
   {
@@ -3774,9 +3771,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{note}\n",
-    "It seems sklearn requires us to actually call `fit` on the `VotingClassifier`, instead of passing in pre-fit models. This is an implementation choice rather than a conceptual limitation.\n",
-    "```"
+    "\n",
+    "> It seems sklearn requires us to actually call `fit` on the `VotingClassifier`, instead of passing in pre-fit models. This is an implementation choice rather than a conceptual limitation.\n"
    ]
   },
   {
@@ -3797,7 +3793,7 @@
    "outputs": [],
    "source": [
     "test_g50k = (\n",
-    "    test_df.query(\"income == '>50K'\")\n",
+    "    test_df.query(\"income == '>50K'\") #**** This function has also appeared before. It functions like a kind of filter().\n",
     "    .sample(4, random_state=42)\n",
     "    .drop(columns=[\"income\"])\n",
     ")\n",
@@ -3924,6 +3920,7 @@
     }
    },
    "source": [
+    "#### **Hard Voting**:\n",
     "For hard voting, these are the votes:"
    ]
   },
@@ -4031,9 +4028,8 @@
     }
    ],
    "source": [
-    "r1 = {\n",
-    "    name: classifier.predict(test_g50k)\n",
-    "    for name, classifier in averaging_model.named_estimators_.items()\n",
+    "r1 = {name: classifier.predict(test_g50k) # for every 'name' key below, store the predicted values as its 'value'\n",
+    "      for name, classifier in averaging_model.named_estimators_.items()\n",
     "}\n",
     "data.update(r1)\n",
     "pd.DataFrame(data)"
@@ -4047,7 +4043,8 @@
     }
    },
    "source": [
-    "For soft voting, these are the scores:"
+    "#### **Soft Voting**:\n",
+    "For soft voting, these are the scores using `predict_proba`:"
    ]
   },
   {
@@ -4155,7 +4152,7 @@
     "    for name, classifier in averaging_model.named_estimators_.items()\n",
     "}\n",
     "\n",
-    "data.update(r2)\n",
+    "data.update(r2) # update the data dictionary\n",
     "pd.DataFrame(data)"
    ]
   },
@@ -4163,7 +4160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(Aside: the probability scores from `DecisionTreeClassifier` are pretty bad)"
+    "> (Aside: the probability scores from `DecisionTreeClassifier` are pretty bad)!"
    ]
   },
   {
@@ -4747,11 +4744,10 @@
     }
    },
    "source": [
-    "Why not always do this?\n",
-    "\n",
-    "1. `fit`/`predict` time.\n",
+    "**Why not always do this?**\n",
+    "1. `fit`/`predict` time is large.\n",
     "2. Reduction in interpretability.\n",
-    "3. Reduction in code maintainability (e.g. Netflix prize)."
+    "3. Reduction in code **maintainability** (e.g. Netflix prize)."
    ]
   },
   {
