--- a/lectures/201-Lecuyer-lectures/15_K-Means.ipynb
+++ b/lectures/201-Lecuyer-lectures/15_K-Means.ipynb
@@ -441,7 +441,7 @@
     "- people who like their spaghetti sauce **spicy**\n",
     "- people who like their spaghetti sauce **extra chunky**\n",
     "\n",
-    "![](../img/prego-pasta-sauces.png)\n",
+    "<img src=\"../img/prego-pasta-sauces.png\" width = 30%>\n",
     "\n",
     "If one “perfect” authentic sauce satisfies 60%, of the people on average, creating several tailored sauce clusters could increase average happiness to between 75% to 78%.\n",
     "\n",
@@ -559,7 +559,7 @@
     "#### Example 1: What is \"correct\" grouping?\n",
     "Which of the following grouping of emoticons is the \"correct\" grouping?\n",
     "\n",
-    "![](../img/emoticon_clustering_example.png)\n",
+    "<img src=\"../img/emoticon_clustering_example.png\" width = 60%>\n",
     "\n",
     "<!-- <img src=\"img/emoticon_clustering_example.png\" alt=\"\" height=\"800\" width=\"800\">  -->"
    ]
@@ -630,7 +630,8 @@
     "\n",
     "- Understand landscape of the market in businesses and craft targeted business or marketing strategies tailored for each group.\n",
     "\n",
-    "![](../img/customer-segmentation.png)\n",
+    "<img src=\"../img/customer-segmentation.png\" width = 60%>\n",
+    "\n",
     "\n",
     "<!-- <img src=\"img/customer-segmentation.png\" alt=\"\" height=\"600\" width=\"600\">  -->\n",
     "\n",
@@ -649,7 +650,8 @@
     "\n",
     "Grouping articles on different topics from different news sources. For example, [Google News](https://news.google.com). \n",
     "\n",
-    "![](../img/google_news.png)\n",
+    "<img src=\"../img/google_news.png\" width = 60%>\n",
+    "\n",
     "\n",
     "<!-- <img src=\"img/google_news.png\" alt=\"\" height=\"1200\" width=\"1200\">  -->\n",
     "    \n",
@@ -2033,7 +2035,7 @@
     "- (B) Roasted garlic hummus\n",
     "- (C) Lemon hummus\n",
     "\n",
-    "![](../img/hummus.png)"
+    "<img src =\"../img/hummus.png\" width = 50%>"
    ]
   },
   {
